Update fmt.Println message from 'Hello' to 'Goodbye'