@@ -1,1 +1,1276 @@
 # interviewPrep
+
+# Java Concurrency Notes
+
+This document provides comprehensive notes on core and advanced Java concurrency concepts, categorized logically for better understanding.
+
+## 1. Fundamentals
+
+### Process vs Thread
+*   **Process**: An independent execution environment (a running program). It has its own memory space. IPC (Inter-Process Communication) is expensive.
+*   **Thread**: A lightweight sub-process within a process. Threads share the process's memory (heap) but have their own stack, program counter, and local variables. Context switching between threads is faster.
+
+### Thread Lifecycle
+A Java thread goes through several states (`java.lang.Thread.State`):
+1.  **NEW**: Thread created but `start()` not yet invoked.
+2.  **RUNNABLE**: Executing in the JVM (may be waiting for OS resources like CPU).
+3.  **BLOCKED**: Waiting for a monitor lock to enter/re-enter a synchronized block/method.
+4.  **WAITING**: Waiting indefinitely for another thread to perform a specific action (via `Object.wait()`, `Thread.join()`, or `LockSupport.park()`).
+5.  **TIMED_WAITING**: Waiting for another thread for a specified time (via `sleep()`, timed `wait()`, `join()`).
+6.  **TERMINATED**: The thread has completed execution.
+
+### Thread Safety & Shared State
+*   **Shared State**: Variables or resources accessed by multiple threads simultaneously.
+*   **Thread Safety**: A class is thread-safe if it behaves correctly when accessed from multiple threads, regardless of the scheduling or interleaving of those threads, without requiring additional synchronization by the calling code.
+
+### Immutability
+*   An immutable object's state cannot be modified after construction (e.g., `String`).
+*   Immutable objects are inherently thread-safe because multiple threads can read them without any risk of race conditions or data corruption.
+
+---
+
+## 2. Concurrency Issues
+
+### Race Condition
+Occurs when the correctness of a computation depends on the relative timing or interleaving of multiple threads (e.g., check-then-act or read-modify-write operations).
+
+### Mutual Exclusion
+The requirement that only one thread can execute a critical section of code at a time to prevent race conditions.
+
+### Liveness Hazards
+*   **Deadlock**: Two or more threads are blocked forever, waiting for each other to release locks.
+*   **Livelock**: Threads are not blocked but continuously change their state in response to each other without making any useful progress (like two people trying to pass each other in a hallway, repeatedly dodging into the same direction).
+*   **Starvation**: A thread is perpetually denied access to necessary resources (like CPU or locks) and cannot make progress, often because other "greedy" threads are monopolizing the resources.
+
+---
+
+## 3. Java Memory Model (JMM)
+
+### Java Memory Model (JMM)
+Defines how threads interact through memory and what behaviors are allowed in concurrent executions. It specifies when changes made by one thread become visible to others.
+
+### Memory Visibility
+The issue where a change made to a shared variable by one thread is not immediately seen by other threads due to caching (CPU registers, L1/L2 caches). 
+
+### Happens-Before
+The fundamental concept of the JMM. If action A *happens-before* action B, then the results of A are visible to B, and A is guaranteed to be ordered before B. (e.g., unlocking a monitor *happens-before* every subsequent lock on that same monitor).
+
+### `volatile` Keyword
+Guarantees memory visibility and prevents instruction reordering. Any read of a volatile variable will always see the most recent write by any thread. It does *not* guarantee atomicity (e.g., `count++` is not safe even if `count` is volatile).
+
+---
+
+## 4. Synchronization & Locks
+
+### Synchronization
+The process of controlling access to shared resources to avoid race conditions and ensure visibility.
+
+### `synchronized` Keyword
+A built-in Java keyword that provides mutually exclusive access to a block or method. It automatically handles locking and unlocking.
+
+### Intrinsic Lock (Monitor)
+Every Java object has an implicit lock associated with it. When a thread enters a `synchronized` block/method, it acquires the monitor lock of the specified object.
+
+### `wait()`, `notify()`, `notifyAll()`
+Methods on `java.lang.Object` used for inter-thread communication. Must be called from within a `synchronized` context.
+*   `wait()`: Releases the lock and puts the thread in the WAITING state.
+*   `notify()`: Wakes up a single waiting thread.
+*   `notifyAll()`: Wakes up all waiting threads (generally preferred to avoid lost signals).
+
+### Locks vs `synchronized`
+`java.util.concurrent.locks.Lock` provides more extensive locking operations than `synchronized`:
+*   Allows polling (`tryLock()`), timed waits, and interruptible lock acquisition.
+*   Requires explicit `lock()` and `unlock()` (usually in a `finally` block).
+
+### Advanced Locks
+*   **ReentrantLock**: A mutual exclusion lock with the same basic behavior as intrinsic locks, but with extended capabilities (fairness, interruptibility). "Reentrant" means a thread can re-acquire a lock it already holds.
+*   **ReadWriteLock**: Maintains a pair of locks (one for read-only operations, one for writing). Allows multiple concurrent readers, but only one exclusive writer.
+*   **StampedLock**: Introduced in Java 8. Provides optimistic reading, which doesn't block writers, making it highly efficient for read-heavy workloads. Does not support reentrancy.
+*   **Condition**: An abstraction over `wait/notify` tied to a `Lock`. Allows having multiple wait-sets per object.
+
+---
+
+## 5. Low-Level Concurrency
+
+### Atomic Variables
+Classes in `java.util.concurrent.atomic` (e.g., `AtomicInteger`, `AtomicReference`) that support lock-free, thread-safe operations on single variables.
+
+### CAS (Compare-And-Swap)
+A CPU-level atomic instruction used to implement atomic variables and lock-free data structures. It updates a variable only if its current value matches the expected value.
+
+### Lock-free Programming
+A concurrent programming technique that ensures thread safety without using blocking locks, typically relying on CAS operations. It prevents deadlocks and reduces context-switching overhead.
+
+---
+
+## 6. Execution & Thread Pools
+
+### Runnable vs Callable
+*   **Runnable**: Represents a task that does not return a result and cannot throw checked exceptions (`run()`).
+*   **Callable**: Represents a task that returns a result and can throw checked exceptions (`call()`).
+
+### Future & CompletableFuture
+*   **Future**: Represents the result of an asynchronous computation. Provides methods to check if complete, wait for completion, and retrieve the result.
+*   **CompletableFuture**: (Java 8+) An extension of `Future` that supports functional-style composable, non-blocking asynchronous programming.
+
+### Executors Framework
+*   **Executor**: A simple interface with a single `execute(Runnable)` method for task submission.
+*   **ExecutorService**: Extends `Executor` with lifecycle management (`shutdown()`) and `submit()` methods returning `Future`.
+*   **ScheduledExecutorService**: Extends `ExecutorService` to support delayed or periodic task execution.
+*   **ThreadPoolExecutor**: The core implementation class of `ExecutorService`, providing extensive configuration parameters (core pool size, max pool size, keep-alive, work queue).
+*   **ForkJoinPool**: A specialized pool designed for work-stealing and divide-and-conquer algorithms (used extensively by Parallel Streams).
+
+### Virtual Threads
+Introduced in Java 21 (Project Loom). Lightweight threads managed by the JVM rather than the OS. Millions of virtual threads can be created, making the thread-per-request model efficient again without exhausting OS resources. They efficiently yield execution when blocked on I/O.
+
+---
+
+## 7. Concurrent Patterns & Collections
+
+### Producer-Consumer Pattern
+A classic concurrency pattern where "producers" generate data and place it in a shared buffer, while "consumers" take data from the buffer and process it. It safely decouples production and consumption.
+
+### BlockingQueue
+An interface designed specifically for the Producer-Consumer pattern (e.g., `ArrayBlockingQueue`, `LinkedBlockingQueue`). It automatically blocks the producer if the queue is full, and blocks the consumer if the queue is empty.
+
+### Concurrent Collections
+Thread-safe alternatives to standard collections in `java.util.concurrent`, optimized for concurrent access.
+*   **ConcurrentHashMap**: A highly scalable thread-safe map. Divides the map into segments (or bins in Java 8+) to allow concurrent reads and fine-grained locking for writes.
+*   **CopyOnWriteArrayList**: A thread-safe list where all mutative operations (add, set, etc.) are implemented by making a fresh copy of the underlying array. Highly efficient for traversal/iteration in read-mostly scenarios.
+
+---
+
+## 8. Synchronizers & Utilities
+
+### Synchronizers
+High-level utility classes that facilitate coordination between threads.
+
+*   **CountDownLatch**: Allows one or more threads to wait until a set of operations being performed in other threads completes. (Count goes down to 0, cannot be reset).
+*   **CyclicBarrier**: Allows a set of threads to all wait for each other to reach a common barrier point. (Can be reused after tripping).
+*   **Phaser**: A more flexible and reusable synchronizer (like a combination of Latch and Barrier) that supports dynamic registration of parties.
+*   **Semaphore**: Maintains a set of permits. Used to control the number of threads that can access a limited resource (e.g., a connection pool).
+*   **ThreadLocal**: Provides thread-local variables. Each thread accessing the variable has its own independently initialized copy of the variable.
+
+### Parallel Streams
+Introduced in Java 8. Allows bulk data operations on collections to be executed concurrently using the common `ForkJoinPool` by simply calling `.parallelStream()` on a collection.
+
+
+
+# Java Collections Internals: Senior Developer Guide
+
+This document explores the deep internals of the Java Collections Framework (JCF), focusing on memory layout, bitwise operations, concurrency controls, and algorithmic complexities expected at a senior level.
+
+---
+
+## 1. Collection Hierarchy
+
+The JCF is split into two main independent trees: `Collection` and `Map`.
+
+*   **Collection Interface**: Root of the collection hierarchy.
+    *   **List**: Ordered, allows duplicates.
+    *   **Set**: Unordered, no duplicates.
+    *   **Queue**: Designed for holding elements prior to processing.
+    *   **Deque**: Double-ended queue, allows insertion/removal at both ends.
+*   **Map Interface**: Key-value pairs, independent of `Collection`. No duplicate keys.
+
+---
+
+## 2. Core Hashing Concepts
+
+Understanding these is prerequisite for mastering `HashMap`, `HashSet`, and `ConcurrentHashMap`.
+
+### Hash Collision, Capacity, and Load Factor
+*   **Capacity**: The number of buckets in the hash table (must be a power of 2, default 16).
+*   **Load Factor**: A measure of how full the table is allowed to get before resizing (default `0.75`).
+*   **Threshold**: `Capacity * Load Factor`. When size exceeds this, a resize (rehashing) triggers.
+*   **Hash Collision**: Occurs when two different keys map to the same bucket index. Resolved via **Separate Chaining** (linked list of nodes) and, in modern Java, **Treeification**.
+
+### The Hashing Algorithm & Bucket Indexing
+Java doesn't use modulo (`%`) for bucket indexing because bitwise operations are faster.
+*   **Index Calculation**: `index = (n - 1) & hash` (where `n` is capacity). Since `n` is a power of 2, `n-1` acts as a bitmask, isolating the lower bits of the hash.
+*   **Hash Spreading**: `HashMap` modifies the key's native `hashCode()` to spread higher bits downward: `hash = key.hashCode() ^ (key.hashCode() >>> 16)`. This mitigates poor native hash functions by incorporating higher-order bits into the index calculation.
+
+### Rehashing
+*   When capacity doubles, a node's new index can only be one of two places: its **current index** or **current index + old capacity**.
+*   Java checks the newly exposed bit (`hash & oldCap`). If `0`, it stays; if `1`, it moves to `current + oldCap`. This avoids recomputing hashes entirely during resize.
+
+### Treeification (Java 8+)
+To prevent DOS attacks via hash collisions degrading performance to $O(n)$:
+*   **TREEIFY_THRESHOLD (8)**: When a bucket's linked list reaches 8 nodes, it converts to a Red-Black Tree, improving worst-case search to $O(\log n)$.
+*   **MIN_TREEIFY_CAPACITY (64)**: Treeification only occurs if the total table capacity is at least 64. Otherwise, the table just resizes.
+*   **UNTREEIFY_THRESHOLD (6)**: During removal or resize, if a tree shrinks to 6 nodes, it converts back to a linked list to save memory.
+
+---
+
+## 3. Map Internals
+
+### HashMap
+*   Backed by an array of `Node<K,V>` (implements `Map.Entry`).
+*   Not thread-safe. Concurrent structural modifications can cause unpredictable behavior (though infinite loops during resize were fixed in Java 8 by maintaining insertion order during rehash).
+*   Allows one `null` key (always mapped to bucket 0) and multiple `null` values.
+
+### LinkedHashMap
+*   Extends `HashMap`. Maintains a doubly-linked list running through all entries.
+*   Nodes contain `before` and `after` pointers in addition to the standard `next` pointer used for bucket chaining.
+*   **Access Order**: Can be configured (via constructor) to sort by access rather than insertion order. Useful for building LRU (Least Recently Used) caches.
+*   Overriding `removeEldestEntry(Map.Entry eldest)` allows automated eviction of old entries.
+
+### TreeMap
+*   NavigableMap backed by a **Red-Black Tree**.
+*   Keys must implement `Comparable` or a `Comparator` must be provided.
+*   Guarantees $O(\log n)$ time for `containsKey`, `get`, `put`, and `remove`.
+*   Does not allow `null` keys (will throw `NullPointerException` during comparison).
+
+### ConcurrentHashMap (Java 8+ Architecture)
+*   Strips away the `Segment` array from Java 7. Uses a single `Node` array, relying heavily on **CAS (Compare-And-Swap)** operations and `synchronized` blocks.
+*   Locks are applied only to the **first node** (the head) of a bucket. Read operations (`get`) are fully lock-free.
+*   **sizeCtl**: A volatile integer used for concurrency control during initialization and resizing.
+*   **ForwardingNode**: A special node type inserted at the head of a bucket during resizing to redirect concurrent threads to the new table, allowing multi-threaded resizing.
+*   Does **not** allow `null` keys or `null` values.
+
+### WeakHashMap
+*   Entries extend `WeakReference<Object>`.
+*   If a key is no longer strongly referenced elsewhere in the application, the GC will reclaim it.
+*   Internally uses a `ReferenceQueue` to poll for garbage-collected keys and remove their corresponding `Entry` objects from the map to free up the values. Ideal for memory-sensitive caches.
+
+### IdentityHashMap
+*   Uses reference equality (`==`) instead of object equality (`equals()`) for keys.
+*   Uses `System.identityHashCode()` instead of the object's `hashCode()`.
+*   Backed by a flat array interleaving keys and values (`[k1, v1, k2, v2...]`), resolving collisions via linear probing rather than chaining.
+
+### EnumMap
+*   Specialized map for `Enum` keys.
+*   Internally backed by two flat arrays (one for keys, one for values).
+*   Extremely fast. Index is determined directly by `Enum.ordinal()`.
+*   Does not call `hashCode()`.
+
+### Hashtable
+*   Legacy class. Thread-safe by synchronizing every method at the object level (high contention).
+*   Replaced by `ConcurrentHashMap`. Does not allow `null` keys or values.
+
+---
+
+## 4. List Internals
+
+### ArrayList
+*   Backed by an `Object[]`. Default initial capacity is 10.
+*   **Growth strategy**: `oldCapacity + (oldCapacity >> 1)` (grows by 50%).
+*   Uses native `System.arraycopy()` for resizing, insertions, and deletions, making middle insertions $O(n)$.
+*   Best for random access ($O(1)$) and iteration.
+
+### LinkedList
+*   Doubly-linked list. Each `Node` contains `item`, `prev`, and `next` references.
+*   High memory overhead due to node object creation.
+*   Random access is $O(n)$ (traverses from the head or tail, whichever is closer).
+*   Rarely the right choice in modern Java due to poor CPU cache locality compared to `ArrayList`.
+
+### Vector & Stack
+*   **Vector**: Legacy. Synchronized methods. Grows by 100% when full. Replaced by `CopyOnWriteArrayList` or `Collections.synchronizedList`.
+*   **Stack**: Extends `Vector`. Inherits the synchronized overhead. Replaced by `ArrayDeque` in modern implementations.
+
+---
+
+## 5. Set Internals
+
+Sets are almost exclusively backed by their Map counterparts. A dummy `Object` (`private static final Object PRESENT = new Object();`) is used for the Map values.
+
+*   **HashSet**: Backed by `HashMap`. Constant time operations.
+*   **LinkedHashSet**: Backed by `LinkedHashMap`. Maintains insertion order.
+*   **TreeSet**: Backed by `TreeMap`. Elements are ordered dynamically upon insertion. Requires `Comparable`/`Comparator`.
+
+---
+
+## 6. Queue & Deque Internals
+
+### PriorityQueue
+*   Backed by a **Min-Heap** implemented as an array.
+*   For an element at index `k`: left child is `2k + 1`, right child is `2k + 2`, parent is `(k - 1) / 2`.
+*   Insertions (`offer`) append to the array and perform a `siftUp` operation to restore heap property.
+*   Removals (`poll`) swap the root with the last element, remove the last, and perform a `siftDown`.
+*   $O(\log n)$ for enqueing and dequeing. $O(1)$ for peek.
+
+### ArrayDeque
+*   Circular array implementation of a double-ended queue.
+*   Uses `head` and `tail` pointers.
+*   Index calculations use bitwise masking: `(head - 1) & (elements.length - 1)`. For this to work, capacity must be a power of 2.
+*   Significantly faster than `Stack` (no sync overhead) and `LinkedList` (no node allocation, better cache locality).
+
+---
+
+## 7. Contracts and Iterators
+
+### equals() & hashCode() Contract
+1.  If `a.equals(b)` is true, `a.hashCode() == b.hashCode()` MUST be true.
+2.  If `a.equals(b)` is false, `a.hashCode()` does not *have* to be different, but differing hashes improve bucket distribution.
+3.  If you override one, you must override the other.
+
+### Comparable vs Comparator
+| Interface | Method | Purpose |
+| :--- | :--- | :--- |
+| **Comparable** | `compareTo(T o)` | Defines the "natural" ordering of an object. Implemented inside the class itself. |
+| **Comparator** | `compare(T o1, T o2)` | Defines an external, custom ordering. Useful when you cannot modify the class or need multiple sort rules. |
+
+### Fail-Fast vs Fail-Safe Iterators
+*   **Fail-fast**: Used by `HashMap`, `ArrayList`, etc. Maintains a `modCount` variable. The iterator copies this to `expectedModCount`. If a structural modification happens outside the iterator, `modCount != expectedModCount`, throwing `ConcurrentModificationException`.
+*   **Fail-safe (Weakly Consistent)**: Used by `ConcurrentHashMap`, `CopyOnWriteArrayList`. Operates on a clone or a stable view of the data. Does not throw CME, but may not reflect insertions/removals made after iteration started.
+
+### Spliterator
+Introduced in Java 8 to support parallel Streams.
+*   `tryAdvance()`: Iterates over single elements.
+*   `trySplit()`: Attempts to partition the underlying data structure, returning a new `Spliterator` for a separate thread, enabling parallel processing.
+*   Carries `characteristics()` (e.g., `ORDERED`, `DISTINCT`, `SIZED`) allowing the Stream API to optimize operations internally.
+
+---
+
+## 8. Immutable Collections & Utilities
+
+### Immutable Collections (Java 9+)
+`List.of()`, `Set.of()`, `Map.of()` create heavily optimized, unmodifiable collections.
+*   **Zero Nulls**: They strictly prohibit `null` elements, keys, or values.
+*   **Highly optimized internals**: `List.of()` returns `List12` (for 1-2 elements) or `ListN` (array-backed) to eliminate object overhead.
+*   Structurally immutable; `add()` / `remove()` throw `UnsupportedOperationException`.
+
+### Collections and Arrays Utility Classes
+*   **Collections.sort()**: Previously used MergeSort, now uses **TimSort** (a hybrid of MergeSort and InsertionSort). It identifies pre-sorted runs in the data, offering $O(n)$ best-case performance.
+*   **Arrays.sort()**: 
+    *   For primitives: Uses **Dual-Pivot Quicksort** (faster, better cache performance).
+    *   For objects: Uses **TimSort** (must remain a stable sort).
+
+---
+
+## 9. Time Complexity Summary
+
+| Structure | Get | Add / Put | Remove | Search (Contains) | Notes |
+| :--- | :--- | :--- | :--- | :--- | :--- |
+| **ArrayList** | $O(1)$ | $O(1)$ amortized | $O(n)$ | $O(n)$ | High shift cost for middle insertions. |
+| **LinkedList** | $O(n)$ | $O(1)$ | $O(1)$ | $O(n)$ | $O(1)$ remove *only if node reference is known*. |
+| **HashMap** | $O(1)$ | $O(1)$ | $O(1)$ | $O(1)$ | Worst case $O(\log n)$ with collisions (Treeification). |
+| **TreeMap** | $O(\log n)$ | $O(\log n)$ | $O(\log n)$ | $O(\log n)$ | Red-Black Tree guarantees bound. |
+| **PriorityQueue**| $O(n)$ | $O(\log n)$ | $O(\log n)$ | $O(n)$ | Search is $O(n)$ as it's an array heap. |
+| **ArrayDeque** | $O(1)$ head/tail | $O(1)$ amortized | $O(1)$ head/tail | $O(n)$ | Fastest queue/stack implementation. |
+
+
+
+# Spring Boot & Security Internals: Senior Developer Notes
+
+This document explores the deep internals, architectural patterns, and execution flows of Spring Boot and Spring Security, tailored for a senior-level understanding of proxy mechanisms, lifecycle management, and security chains.
+
+---
+
+## 1. Core Spring Architecture (IoC & Container)
+
+### IoC Container & Dependency Injection (DI)
+*   **ApplicationContext**: The advanced IoC container extending `BeanFactory`. It handles bean instantiation, wiring, and lifecycle.
+*   **Dependency Injection**: Replaces manual object creation. **Constructor Injection** is the industry standard (ensures immutability, prevents partial initialization, and safely exposes circular dependencies at startup rather than runtime). Field injection (`@Autowired`) relies on reflection and complicates testing.
+*   **Component Scan**: Triggered by `@ComponentScan` (inherited via `@SpringBootApplication`). Spring uses ASM (a bytecode manipulation framework) to read `.class` files without loading them into the JVM, identifying classes annotated with `@Component` and its stereotypes.
+
+### Bean Scopes
+*   **Singleton (Default)**: One shared instance per Spring container. Cached in the `DefaultSingletonBeanRegistry`. Must be completely stateless or heavily synchronized to be thread-safe.
+*   **Prototype**: A new instance is created every time it is requested. **Crucial:** Spring does *not* manage the complete lifecycle of prototype beans; it instantiates and configures them, but it is the client's responsibility to clean them up (no `@PreDestroy` is called).
+*   **Web Scopes**: `Request`, `Session`, `Application`, `WebSocket`. Backed by `RequestContextHolder` (ThreadLocal).
+
+### Bean Lifecycle Internals
+Understanding the lifecycle is critical for writing framework-level extensions.
+1.  **Instantiation**: Bean instance created.
+2.  **Populate Properties**: Dependencies injected.
+3.  **Aware Interfaces**: `BeanNameAware`, `ApplicationContextAware` invoked.
+4.  **BeanPostProcessor (Before)**: `postProcessBeforeInitialization` executes.
+5.  **Initialization**: `@PostConstruct` -> `InitializingBean.afterPropertiesSet()` -> custom `init-method`.
+6.  **BeanPostProcessor (After)**: `postProcessAfterInitialization` executes. **This is where AOP proxies (CGLIB/JDK) are generated** to wrap the actual bean.
+7.  **Destruction**: `@PreDestroy` -> `DisposableBean.destroy()`.
+
+### @Configuration & @Bean
+*   Methods annotated with `@Bean` inside `@Configuration` classes are intercepted by **CGLIB proxies**.
+*   When a `@Bean` method calls another `@Bean` method in the same class, the proxy intercepts the call and serves the cached singleton instance instead of executing the method again.
+*   *Optimization (Spring 5.2+)*: Using `@Configuration(proxyBeanMethods = false)` (Lite mode) disables CGLIB proxying, speeding up startup time if inter-bean method calls aren't needed.
+
+---
+
+## 2. Spring Boot Autowiring & Configuration
+
+### Auto Configuration
+*   Triggered by `@EnableAutoConfiguration`.
+*   Uses `AutoConfigurationImportSelector` to read configuration files. In Spring Boot 2.7+, it reads `META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports` (replacing the legacy `spring.factories`).
+*   Evaluates **Conditions** (`@ConditionalOnClass`, `@ConditionalOnMissingBean`, `@ConditionalOnProperty`). Auto-configuration only activates if the required classes are on the classpath and the developer hasn't defined their own competing beans.
+
+### Starters & Initializer
+*   **Spring Initializer**: Generates the project structure.
+*   **Starter Dependencies**: Empty JARs containing a `pom.xml` (or `build.gradle`) that aggregates necessary dependencies (a Bill of Materials). They curate compatible versions to prevent classpath conflicts.
+
+### Profiles & Configuration Properties
+*   **Profiles**: Allow environment-specific configurations (`@Profile("dev")`).
+*   **Configuration Properties**: `@ConfigurationProperties` is strongly typed, supports relaxed binding (e.g., `my-prop`, `my_prop`, `MY_PROP`), and supports JSR-380 validation. Preferred over `@Value` for complex or grouped properties.
+
+---
+
+## 3. Web Layer & Cross-Cutting Concerns
+
+### REST Controllers & DispatcherServlet
+*   The `DispatcherServlet` is the Front Controller.
+*   Flow: `DispatcherServlet` delegates to `HandlerMapping` (finds the Controller method) -> `HandlerAdapter` (invokes the method) -> `HttpMessageConverter` (serializes/deserializes payload, usually Jackson for JSON).
+
+### Exception Handling & Validation
+*   **@ControllerAdvice**: Global exception handler acting as an AOP-like interceptor around controllers. Uses `@ExceptionHandler`.
+*   **Validation**: Uses Hibernate Validator. `@Valid` cascades validation to nested objects. `@Validated` is used at the class level to support validation groups and method-level parameter validation.
+
+### Request Processing Hierarchy
+| Mechanism | Scope | Access To | Use Case |
+| :--- | :--- | :--- | :--- |
+| **Filter** | Servlet Container | `HttpServletRequest/Response` | Security, CORS, global logging of raw payloads. |
+| **Interceptor** | Spring MVC | `HandlerMethod`, Spring Beans | Rate limiting per handler, audit logging user context. |
+| **AOP** | Method Level | Method arguments, target object | Transaction management, method-level security, metrics. |
+
+### AOP (Aspect-Oriented Programming)
+*   Implements cross-cutting concerns.
+*   **Proxying**: Uses **JDK Dynamic Proxies** if the bean implements an interface, otherwise falls back to **CGLIB** to subclass the bean.
+*   **Self-Invocation Problem**: Calling an `@Async`, `@Transactional`, or `@Cacheable` method from *within the same class* bypasses the proxy, rendering the annotation useless.
+
+### Async Processing & Scheduling
+*   **@Async**: Shifts execution to a separate thread pool (`ThreadPoolTaskExecutor`). Returns `CompletableFuture` for asynchronous results.
+*   **@Scheduled**: Executes tasks based on cron, fixed-delay, or fixed-rate.
+*   **Spring Events**: Implement Publisher/Subscriber pattern using `ApplicationEventPublisher` and `@EventListener`. Synchronous by default, but can be made asynchronous by combining with `@Async`.
+
+### Actuator & DevTools
+*   **Actuator**: Exposes operational endpoints (`/health`, `/metrics`, `/prometheus`). Integrated tightly with Micrometer for observability.
+*   **DevTools**: Uses two classloaders. The *Base* classloader loads third-party JARs. The *Restart* classloader loads user code. On file change, only the Restart classloader is rebuilt, resulting in very fast live reloads.
+
+---
+
+## 4. Spring Security Architecture
+
+### The Security Filter Chain
+Spring Security does not intercept controllers; it operates entirely at the Servlet Filter level.
+1.  **DelegatingFilterProxy**: A standard Servlet Filter registered with the web server (Tomcat). It intercepts requests and delegates them to a Spring bean.
+2.  **FilterChainProxy**: The Spring bean that receives the delegation. It manages multiple `SecurityFilterChain` instances.
+3.  **SecurityFilterChain**: A list of specialized security filters.
+
+**Crucial Default Filter Order:**
+1.  `SecurityContextPersistenceFilter` (Legacy) / `SecurityContextHolderFilter` (Modern): Restores `SecurityContext` from the session.
+2.  `CorsFilter`: Processes Preflight requests.
+3.  `CsrfFilter`: Validates CSRF tokens.
+4.  `UsernamePasswordAuthenticationFilter`: Intercepts login form submissions.
+5.  `BasicAuthenticationFilter`: Processes HTTP Basic Auth headers.
+6.  `ExceptionTranslationFilter`: Catches `AccessDeniedException` and `AuthenticationException` to return 401/403 or redirect to login.
+7.  `AuthorizationFilter`: Enforces URL-level authorization rules.
+
+### Security Context
+*   **SecurityContextHolder**: Stores the authenticated `Authentication` object.
+*   Backed by `ThreadLocal` by default (`MODE_THREADLOCAL`).
+*   If passing context to spawned threads, use `DelegatingSecurityContextExecutor` or configure `MODE_INHERITABLETHREADLOCAL`.
+
+---
+
+## 5. Authentication & Authorization Flow
+
+### Authentication Architecture
+1.  **AuthenticationManager**: The core interface. Its default implementation is `ProviderManager`.
+2.  **ProviderManager**: Iterates through a list of `AuthenticationProvider`s until one succeeds.
+3.  **DaoAuthenticationProvider**: The standard provider. It calls `UserDetailsService` to load the user and `PasswordEncoder` to verify credentials.
+4.  **UserDetailsService**: Contract to load user data (returns `UserDetails`).
+5.  **PasswordEncoder**: Typically `BCryptPasswordEncoder`. BCrypt handles salting automatically (the salt is embedded in the resulting hash string), making rainbow table attacks computationally unfeasible.
+
+### Method Security
+*   Enabled via `@EnableMethodSecurity`.
+*   **@PreAuthorize**: Validates permissions *before* method execution using SpEL (`@PreAuthorize("hasRole('ADMIN')")`).
+*   **@PostAuthorize**: Runs *after* execution, allowing access checks against the returned object.
+
+---
+
+## 6. Modern Paradigms: JWT, OAuth2, and Stateless REST
+
+### Session Management & Stateless Authentication
+*   For REST APIs, servers should not maintain session state.
+*   Set `SessionCreationPolicy.STATELESS`. This tells Spring Security not to use `HttpSessionSecurityContextRepository`, meaning the `SecurityContext` must be rebuilt on *every single request* via a token.
+
+### JWT (JSON Web Token) Integration
+*   JWT is typically implemented by writing a **Custom Authentication Filter**.
+*   The custom filter extends `OncePerRequestFilter`.
+*   **Placement**: Injected via `http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)`.
+*   **Flow**:
+    1. Extract `Authorization: Bearer <token>`.
+    2. Validate JWT signature and expiration.
+    3. Extract claims (username, roles).
+    4. Create `UsernamePasswordAuthenticationToken` and inject it into `SecurityContextHolder.getContext().setAuthentication(...)`.
+
+### OAuth2 & Resource Server
+*   Instead of manually parsing JWTs, modern Spring relies on `spring-boot-starter-oauth2-resource-server`.
+*   Validates JWTs cryptographically using a **JWK Set URI** exposed by the Identity Provider (Keycloak, Auth0).
+*   Automatically translates JWT scopes into Spring Security `GrantedAuthority` objects (`SCOPE_read` -> `OidcUser` claims).
+
+### CORS and CSRF Context
+*   **CORS (Cross-Origin Resource Sharing)**: Browsers enforce this. The server must handle `OPTIONS` preflight requests. In Spring Security, the `CorsFilter` must precede authentication, otherwise, the unauthenticated preflight request will be rejected with a 401.
+*   **CSRF (Cross-Site Request Forgery)**: Requires an attacker to hijack an ambient credential (a session cookie). **If you are building a purely stateless API using JWT Bearer tokens in the Authorization header, CSRF protection is unnecessary and should be disabled** (`http.csrf().disable()`), because Bearer tokens are not sent automatically by the browser.
+
+# Transactions and JPA/Hibernate: Senior Developer Notes
+
+This document explores the deep internals of Spring transaction management, Hibernate's persistence mechanisms, locking strategies, and performance optimizations.
+
+---
+
+## 1. Core Transaction Management
+
+### ACID Properties
+*   **Atomicity**: All operations succeed or fail as a single unit.
+*   **Consistency**: A transaction transitions the database from one valid state to another.
+*   **Isolation**: Concurrent transactions execute as if they were sequential.
+*   **Durability**: Committed data is permanently stored, surviving crashes.
+
+### @Transactional & Proxies
+*   Spring uses **AOP Proxies** (JDK or CGLIB) to wrap `@Transactional` methods.
+*   **Self-Invocation**: Calling a `@Transactional` method from another method within the *same class* bypasses the proxy, meaning no transaction is started.
+*   **Rollback**: By default, Spring only rolls back on **unchecked exceptions** (`RuntimeException` and `Error`). Checked exceptions do *not* trigger a rollback unless explicitly configured via `@Transactional(rollbackFor = Exception.class)`.
+
+### Transaction Propagation
+Defines how boundaries are handled when a transactional method calls another.
+*   **REQUIRED (Default)**: Joins the existing transaction if one exists; otherwise, creates a new one.
+*   **REQUIRES_NEW**: Suspends the current transaction and creates a completely new, independent physical transaction.
+*   **NESTED**: Executes within a database savepoint. If the nested transaction fails, it rolls back to the savepoint without affecting the outer transaction. (Requires JDBC savepoint support).
+*   **MANDATORY**: Throws an exception if no active transaction exists.
+*   **SUPPORTS**: Runs transactionally if one exists; otherwise, runs non-transactionally.
+*   **NOT_SUPPORTED**: Suspends the current transaction and executes non-transactionally.
+*   **NEVER**: Throws an exception if an active transaction exists.
+
+### Transaction Isolation Levels
+*   **READ_UNCOMMITTED**: Allows *Dirty Reads* (reading uncommitted changes from other transactions).
+*   **READ_COMMITTED**: Prevents Dirty Reads. Standard default for Postgres/Oracle.
+*   **REPEATABLE_READ**: Prevents *Non-Repeatable Reads* (re-reading data gives the same result). Default for MySQL (InnoDB).
+*   **SERIALIZABLE**: Prevents *Phantom Reads* (new rows matching a query appearing during the transaction). Highest strictness, terrible concurrency.
+
+### Read-Only Transactions
+*   `@Transactional(readOnly = true)`.
+*   **Optimization**: Tells Hibernate to set the `FlushMode` to `MANUAL` or `NEVER`. This entirely **bypasses Dirty Checking**, saving significant CPU cycles and memory since Hibernate no longer needs to maintain snapshots of loaded entities.
+
+---
+
+## 2. Locking Strategies
+
+### Optimistic Locking & Versioning
+*   Assumes concurrent collisions are rare. Uses application-level checks.
+*   Implemented via the `@Version` annotation on a numeric or timestamp field.
+*   On `UPDATE`, Hibernate appends `WHERE id = ? AND version = ?`. If the row count returned is 0, another transaction modified it, and an `OptimisticLockException` is thrown.
+*   Highly scalable, best for high-read/low-write environments.
+
+### Pessimistic Locking
+*   Assumes collisions are frequent. Uses database-level locks.
+*   `LockModeType.PESSIMISTIC_WRITE`: Issues a `SELECT ... FOR UPDATE`, blocking other transactions from reading, updating, or deleting the row until the current transaction commits.
+*   `LockModeType.PESSIMISTIC_READ`: Issues a `SELECT ... FOR SHARE` (shared lock).
+*   Can lead to deadlocks and severely reduces concurrency.
+
+---
+
+## 3. Hibernate Architecture & Entity Lifecycle
+
+### EntityManager & Session
+*   **EntityManager**: The standard JPA interface.
+*   **Session**: The native Hibernate implementation that wraps the JDBC connection. `EntityManager` delegates to `Session` under the hood.
+
+### Persistence Context (First-Level Cache)
+*   A localized cache (Map) tied to the `EntityManager` transaction lifecycle.
+*   Ensures that if you fetch the same entity ID multiple times in one transaction, you get the exact same Java object reference (`a == b`).
+
+### Entity States
+1.  **Transient**: newly instantiated via `new`. No ID, not tracked.
+2.  **Managed (Persistent)**: Attached to the Persistence Context. Changes are tracked.
+3.  **Detached**: The entity has an ID, but the Persistence Context is closed or `clear()` was called. Changes are ignored.
+4.  **Removed**: Scheduled for deletion upon flush.
+
+### Dirty Checking, Flush, and Clear
+*   **Dirty Checking**: When an entity is loaded, Hibernate takes a deep-copy snapshot. During a flush, it compares the current state to the snapshot. If different, it queues an `UPDATE` statement.
+*   **Flush (`em.flush()`)**: Synchronizes the Persistence Context with the database by executing queued SQL statements. **It does not commit the database transaction.**
+*   **Clear (`em.clear()`)**: Evicts all entities from the Persistence Context, transitioning them to Detached. Crucial for memory management in batch processing.
+
+### Caching Tiers
+*   **First-Level Cache**: Always ON. Session-scoped.
+*   **Second-Level Cache (L2)**: OFF by default. SessionFactory-scoped (shared across all transactions). Providers include Ehcache and Hazelcast.
+*   **Query Cache**: Caches the *primary keys* returned by a query, not the entity data itself. Must be used in conjunction with the L2 cache, otherwise it triggers massive N+1 lookups.
+
+---
+
+## 4. Querying & Performance (The N+1 Problem)
+
+### Query Types
+*   **JPQL**: Object-oriented query language targeting Entity names and fields.
+*   **Criteria API**: Programmatic, type-safe query construction. Verbose but excellent for dynamic filtering.
+*   **Native Query**: Raw SQL. Bypasses L1 cache for results but can map back to managed entities.
+*   **Named Query**: Precompiled JPQL queries defined on the Entity class, validated at application startup.
+
+### FetchType & Lazy Loading
+*   **EAGER**: Data is fetched immediately (via JOIN or subsequent SELECT). Default for `@ManyToOne` and `@OneToOne`.
+*   **LAZY**: Injects a proxy object (CGLIB/ByteBuddy). The actual database query executes only when a property (other than the ID) is accessed. Default for `@OneToMany` and `@ManyToMany`.
+*   *Rule of Thumb*: Always explicitly set all associations to `FetchType.LAZY`.
+
+### The N+1 Problem & Entity Graphs
+*   **N+1 Problem**: Occurs when you fetch N parent entities, and then loop through them accessing a LAZY collection, triggering N additional queries.
+*   **Fix 1 - JOIN FETCH**: Explicitly tell JPQL to join and initialize the association in a single query.
+*   **Fix 2 - Entity Graph**: JPA 2.1 feature. Allows you to define query-specific fetch plans (`@EntityGraph`), temporarily overriding a `LAZY` association to `EAGER` for that specific repository method without hardcoding `JOIN FETCH`.
+
+---
+
+## 5. Relationships & Mapping
+
+### Cascade Types vs Orphan Removal
+*   **CascadeType**: Propagates `EntityManager` operations (PERSIST, MERGE, REMOVE) from parent to child.
+*   **Orphan Removal**: Strictly about relationships. `orphanRemoval = true` means that if a child is removed from the parent's collection (or set to null), the child row is hard-deleted from the database.
+
+### Inheritance Mapping
+1.  **SINGLE_TABLE**: All classes in the hierarchy map to one table. Requires a `@DiscriminatorColumn`. Best performance (no joins), but subclass columns must be nullable.
+2.  **JOINED**: One table per class. Parent holds common fields, children hold specific fields. Highly normalized, but querying polymorphic collections requires heavy `LEFT JOIN`s.
+3.  **TABLE_PER_CLASS**: Each concrete class gets its own table with all inherited fields. Querying the base class results in slow `UNION` queries.
+
+### Composite Keys & Embeddables
+*   **@Embeddable / @EmbeddedId**: Defines a reusable value object that acts as a composite primary key.
+*   **@IdClass**: Flattens the composite key properties directly onto the entity.
+*   Must implement `Serializable` and override `equals()` and `hashCode()`.
+
+---
+
+## 6. Advanced Data Operations
+
+### Batch Insert & Batch Update
+*   JDBC batching groups multiple statements into a single network round-trip.
+*   **Crucial limitation**: If you use `GenerationType.IDENTITY` (e.g., MySQL auto-increment), Hibernate **disables batch inserts**. Why? Hibernate needs the assigned ID immediately to manage the entity, forcing it to execute inserts one by one. Use `GenerationType.SEQUENCE` to enable batching.
+*   Requires properties: `hibernate.jdbc.batch_size`, `hibernate.order_inserts`, `hibernate.order_updates`.
+
+### Projections & DTO Mapping
+Fetching entire Managed Entities just to read data is inefficient (triggers snapshots, consumes L1 cache).
+*   **Interface-based Projections**: Define a Spring Data interface with getters matching entity fields. Spring generates a proxy returning only selected columns.
+*   **DTO Projections**: Use JPQL constructor expressions (`SELECT new com.example.MyDTO(e.name, e.status) FROM Entity e`). Bypasses the Persistence Context entirely. Unbeatable read performance.
+
+### Pagination, Sorting & Specification API
+*   **Pagination / Sorting**: Handled via `Pageable` and `Sort` parameters. `Page<T>` executes a secondary `COUNT` query to calculate total pages. `Slice<T>` avoids the `COUNT` query (only knows if there is a "next" page), optimizing infinite-scroll APIs.
+*   **Specification API**: Spring's wrapper around the JPA Criteria API. Allows composing complex, dynamic `WHERE` clauses (e.g., `findBy(spec, pageable)`) using fluent builders and logical `AND/OR` combinations.
+
+# SQL Optimization and Indexing: Senior Developer Notes
+
+This document explores database engine internals, the mathematics of query optimization, indexing architecture (B+ Trees, Hashing), and advanced execution strategies. 
+
+---
+
+## 1. The Query Optimizer & Execution Plans
+
+### Cost-Based Optimizer (CBO)
+*   The DB engine does not execute queries exactly as written. The CBO translates SQL into an execution plan by evaluating multiple algebraic permutations.
+*   It assigns a "Cost" (an arbitrary unit representing Disk I/O, CPU, and Memory usage) to each path based on **Database Statistics** (row counts, data distribution histograms, index density).
+*   *Caveat*: Outdated statistics lead the CBO to choose catastrophic execution plans. Maintenance jobs must periodically run `ANALYZE` (Postgres) or `UPDATE STATISTICS` (SQL Server/Oracle).
+
+### Explain Plan
+*   **`EXPLAIN`**: Shows the *predicted* execution plan and estimated costs without running the query.
+*   **`EXPLAIN ANALYZE`** (or `STATISTICS IO, TIME`): Actually executes the query and compares the estimated rows/cost against the actual execution metrics. Crucial for identifying bottleneck operations.
+
+### Scan Types
+*   **Full Table Scan (Heap Scan)**: Sequentially reads every block in the table. $O(N)$. Only optimal when retrieving a large percentage of the table where random I/O from an index would be slower than sequential disk reads.
+*   **Index Scan**: Traverses the leaf nodes of an index. Still essentially $O(N)$ of the index, but avoids the main table.
+*   **Index Seek**: Uses the B-Tree structure to navigate directly to the specific starting row in $O(\log N)$ time, then reads forward. The holy grail of query optimization.
+
+---
+
+## 2. Indexing Architecture & Data Structures
+
+### B-Tree Index (B+ Tree)
+*   The default index structure. It is actually a **B+ Tree**, meaning all data pointers (or actual data) reside strictly at the leaf nodes, which are linked together in a doubly-linked list.
+*   This linked-list structure makes B+ Trees exceptionally fast for **Range Queries** (`BETWEEN`, `<`, `>`).
+
+### Hash Index
+*   Uses a hash table structure. $O(1)$ lookup time.
+*   Strictly supports **Equality** operations (`=`, `IN`). Cannot be used for range queries or sorting. Usually memory-resident.
+
+### Clustered vs Non-Clustered Indexes
+*   **Clustered Index**: Dictates the actual physical sorting of rows on disk. Therefore, a table can only have **one**. The leaf nodes of a clustered index *are* the data pages. Usually the Primary Key.
+*   **Non-Clustered Index**: A separate data structure. The leaf nodes contain a copy of the indexed columns and a pointer (either the physical Row ID or the Clustered Key) back to the actual data row.
+
+### Advanced Index Configurations
+*   **Composite Index**: An index on multiple columns (`A, B, C`). Governed by the **Left-Prefix Rule**: the index is only usable if the query filters on `A`, or `A and B`. A query filtering only on `B and C` cannot use the index tree to seek.
+*   **Covering Index**: When a Non-Clustered index contains all the columns requested in the `SELECT` clause. The engine returns data directly from the index, entirely avoiding the expensive "Bookmark Lookup" back to the main table.
+*   **Unique Index**: Enforces data integrity. The engine optimizes execution because it knows it can stop searching the moment it finds one match.
+*   **Partial (Filtered) Index**: Created with a `WHERE` clause (`CREATE INDEX idx_active ON users(id) WHERE status = 'ACTIVE'`). Saves massive disk space and RAM, highly efficient for querying specific subsets.
+*   **Full Text Index**: Inverted index structure (mapping words to row IDs, ignoring stop-words) designed for tokenized string searching (`LIKE '%term%'` forces a full table scan; Full Text avoids this).
+
+### Selectivity & Cardinality
+*   **Cardinality**: The number of distinct values in a column.
+*   **Selectivity**: `Cardinality / Total Rows`. High selectivity (e.g., Email Address) makes for a great B-Tree index. Low selectivity (e.g., Gender, Boolean) is terrible for a standard B-Tree because the engine will likely abandon the index and just scan the table.
+
+---
+
+## 3. Join Algorithms
+
+The CBO dynamically chooses the physical join operation based on table sizes and available indexes.
+
+| Algorithm | Complexity | How It Works | Ideal Use Case |
+| :--- | :--- | :--- | :--- |
+| **Nested Loop** | $O(N \times M)$ | Loops through the outer table; for each row, executes a lookup on the inner table. | Small outer table, highly indexed inner table. |
+| **Hash Join** | $O(N + M)$ | Builds an in-memory hash table of the smaller table, then streams the larger table to probe for matches. | Large datasets, no useful indexes, equality (`=`) joins. |
+| **Merge Join** | $O(N + M)$ | Streams through both tables simultaneously. Requires both inputs to be strictly sorted. | Large datasets where both tables are already indexed/sorted on the join key. |
+
+---
+
+## 4. Advanced Querying Concepts
+
+### Window Functions vs Aggregation
+*   **Aggregation (`GROUP BY`)**: Collapses multiple rows into a single summary row. You lose access to the individual row data.
+*   **Window Functions (`OVER`)**: Performs calculations across a set of rows related to the current row, but *retains the individual rows*.
+*   Essential for ranking (`ROW_NUMBER()`, `DENSE_RANK()`), running totals, and accessing adjacent rows (`LEAD()`, `LAG()`) without self-joins.
+
+### CTE (Common Table Expressions)
+*   Defined via the `WITH` clause. Primarily improves readability by modularizing complex subqueries.
+*   **Recursive CTEs**: Essential for querying hierarchical/tree data (e.g., manager/employee chains) in a single query.
+*   *Optimization Note*: Some databases (Postgres) materialized CTEs by default in the past, blocking predicate pushdown. Modern engines generally fold CTEs into the main query unless explicitly materialized.
+
+### Materialized Views
+*   Unlike standard views (which are just saved SQL macros executed on the fly), Materialized Views physically store the result set on disk.
+*   Incurs a write penalty (must be refreshed synchronously or asynchronously) but provides instant read performance for massive aggregations.
+
+---
+
+## 5. Pagination Strategies
+
+### LIMIT vs OFFSET (The Anti-Pattern)
+*   Query: `SELECT * FROM orders ORDER BY date DESC OFFSET 100000 LIMIT 50`.
+*   **The Problem**: The database cannot skip the first 100,000 rows. It must retrieve 100,050 rows, sort them, discard the first 100,000, and return the 50. Performance degrades linearly ($O(N)$) as the offset grows.
+
+### Keyset Pagination (Seek Method)
+*   Query: `SELECT * FROM orders WHERE id > last_seen_id ORDER BY id ASC LIMIT 50`.
+*   **The Solution**: Uses an Index Seek to jump directly to the exact B-Tree node of `last_seen_id`.
+*   Performance remains strictly $O(1)$ regardless of depth. The only trade-off is the inability to jump to random page numbers (e.g., "Go to Page 84").
+
+---
+
+## 6. Architecture, Scaling, & Concurrency
+
+### Database Design
+*   **Normalization**: Eliminating redundancy (typically aiming for 3NF). Optimizes for Write speed and Data Integrity. Costs CPU/Memory during Reads due to `JOIN`s.
+*   **Denormalization**: Intentionally copying data to eliminate `JOIN`s. Optimizes for Read speed at the cost of Write complexity (managing update anomalies).
+*   **Partitioning**: Horizontal splitting of a table into smaller physical tables *within the same database instance* (e.g., partitioning logs by month). Transparent to the application. Queries utilize **Partition Pruning** to entirely skip irrelevant disk partitions.
+*   **Sharding**: Horizontal splitting across *multiple physical database servers*. Requires application-level routing or middleware (e.g., Vitess, Citus) based on a Shard Key.
+
+### Concurrency Controls
+*   **Connection Pooling**: TCP handshakes and authentication are incredibly expensive. Pools (like HikariCP) maintain open connections, drastically reducing latency for short-lived queries.
+*   **Locking Granularity**: Escalates from Row-level -> Page-level -> Table-level.
+    *   *Shared Locks (Read)*: Allow other reads, block writes.
+    *   *Exclusive Locks (Write)*: Block both reads and writes.
+*   **Deadlocks**: Occur when Transaction A locks Row 1 and waits for Row 2, while Transaction B locks Row 2 and waits for Row 1. The DB engine resolves this by killing one transaction (the "victim"). Mitigated by ensuring all application code updates tables/rows in a strictly consistent alphabetical order.
+*   **MVCC (Multi-Version Concurrency Control)**: The mechanism allowing high concurrency isolation levels. Instead of locking rows for reading, the engine uses Undo Logs/Rollback Segments to construct a point-in-time snapshot of the row, allowing "readers to not block writers, and writers to not block readers."
+
+# Microservices Patterns: Senior Developer Notes
+
+This document explores the architectural patterns, distributed data challenges, and resilience mechanisms inherent to microservices, geared toward a senior-level understanding of system design and operational trade-offs.
+
+---
+
+## 1. Core Infrastructure & Routing
+
+### Service Registry & Service Discovery
+*   **Service Registry**: A database of available service instances (e.g., Netflix Eureka, HashiCorp Consul, ZooKeeper). Instances register themselves on startup and deregister on shutdown.
+*   **Service Discovery**: The mechanism of finding a service's IP/port.
+    *   *Server-Side*: The API Gateway or load balancer queries the registry and routes the request.
+    *   *Client-Side*: The calling service queries the registry directly and picks an instance (reduces network hops but couples the client to the registry logic).
+
+### Load Balancing & API Gateway
+*   **API Gateway**: The single entry point for all clients. Handles cross-cutting concerns: SSL termination, authentication/authorization (JWT validation), rate limiting, and request routing (e.g., Spring Cloud Gateway, Kong).
+*   **Load Balancing**: Distributes traffic across instances. 
+*   **Client-Side Load Balancing**: The caller holds the list of IPs and uses an algorithm (Round Robin, Weighted Response Time) to pick the target directly (e.g., Spring Cloud LoadBalancer, formerly Ribbon).
+
+---
+
+## 2. Configuration & Health
+
+### Externalized & Distributed Configuration
+*   **Externalized Configuration**: Adhering to the 12-Factor App methodology, configuration is strictly separated from code. Same artifact, different configuration per environment.
+*   **Config Server**: A centralized service (e.g., Spring Cloud Config) that reads properties from a backend (Git, HashiCorp Vault) and serves them to microservices at startup.
+*   **Distributed Configuration**: Services can dynamically refresh properties at runtime without restarting (via Spring Cloud Bus and `@RefreshScope`), propagating config changes via messaging (RabbitMQ/Kafka).
+
+### Health Checks
+*   Services expose endpoints (e.g., Spring Boot Actuator `/health`) for infrastructure to monitor.
+*   **Liveness Probe**: Is the application running? (If it fails, Kubernetes restarts the pod).
+*   **Readiness Probe**: Is the application ready to accept traffic? (If it fails, Kubernetes removes it from the load balancer, but does not kill it).
+
+---
+
+## 3. Resilience Patterns
+
+Distributed systems fail. Resilience patterns prevent localized failures from causing cascading system outages.
+
+### Circuit Breaker
+*   Acts as a state machine (Closed -> Open -> Half-Open).
+*   **Closed**: Traffic flows normally. If failure rate exceeds a threshold, it trips.
+*   **Open**: Fast-fails all requests immediately without hitting the downstream service, giving it time to recover.
+*   **Half-Open**: After a timeout, allows a limited number of test requests through. If they succeed, it closes; if they fail, it re-opens. (Typically implemented via Resilience4j).
+
+### Retry & Bulkhead
+*   **Retry**: Automatically retries transient failures (e.g., network blips). Must include **Exponential Backoff** (increasing wait time) and **Jitter** (randomized delay) to prevent "Thundering Herd" attacks on recovering services.
+*   **Bulkhead**: Isolates resources.
+    *   *Thread Pool Bulkhead*: Assigns dedicated thread pools to specific downstream services so one slow service doesn't exhaust the entire application's threads.
+    *   *Semaphore Bulkhead*: Limits concurrent executions using atomic counters (lower memory overhead).
+
+### Rate Limiting
+*   Protects APIs from being overwhelmed. Common algorithms include:
+    *   **Token Bucket**: Allows bursts of traffic up to a capacity.
+    *   **Leaky Bucket**: Smooths out traffic into a steady, fixed rate stream.
+
+---
+
+## 4. Distributed Data Management
+
+### Database per Service vs Shared Database
+*   **Database per Service**: The golden rule of microservices. Enforces loose coupling. Service A cannot query Service B's database directly; it must use Service B's API.
+*   **Shared Database (Anti-Pattern)**: Multiple services read/write to the same DB. Creates tight coupling and a single point of failure. Usually a transitional phase during monolith extraction.
+
+### Distributed Transactions & Sagas
+*   **Distributed Transactions (2PC)**: Two-Phase Commit coordinates transactions across multiple DBs using a coordinator. **Avoid in microservices**: It relies on synchronous blocking locks, killing scalability and availability (CAP theorem).
+*   **Saga Pattern**: Replaces 2PC with a sequence of local transactions. Each local transaction updates the DB and publishes an event to trigger the next step. If a step fails, the Saga executes **Compensating Transactions** to undo the preceding steps.
+    *   **Choreography**: Decentralized. Services listen to events and decide what to do next. Good for simple flows; becomes a tangled mess for complex ones.
+    *   **Orchestration**: Centralized. A single "Orchestrator" service acts as a state machine, explicitly commanding other services to execute steps or compensations.
+
+### Outbox Pattern
+*   Solves the dual-write problem (writing to a DB and publishing an event atomically without 2PC).
+*   **Mechanism**: The service updates its business tables AND inserts the event into an `outbox` table in the *same local database transaction*. A separate asynchronous process (e.g., Debezium via transaction log tailing, or a polling publisher) reads the outbox table and guarantees delivery to the message broker.
+
+---
+
+## 5. Advanced Messaging & Architecture
+
+### Event Driven Architecture (EDA) & Idempotency
+*   **EDA**: Services communicate asynchronously via events. Highly decoupled, highly scalable, but introduces eventual consistency.
+*   **Idempotency**: The ability to process the same message multiple times without changing the result beyond the first application. Crucial in EDA because message brokers guarantee "At-Least-Once" delivery. Implemented using unique **Idempotency Keys** checked against a database before processing.
+
+### CQRS & Event Sourcing
+*   **CQRS (Command Query Responsibility Segregation)**: Splits the application into a Write Model (Commands) and a Read Model (Queries). Allows optimizing read databases (e.g., ElasticSearch, Redis) independently from write databases (e.g., PostgreSQL).
+*   **Event Sourcing**: Instead of storing the *current state* of an entity, the system stores an append-only log of *state-changing events*. The current state is derived by replaying the events (a left-fold). Provides an infallible audit trail. Often paired with CQRS.
+
+---
+
+## 6. Deployment, Migration, & Service Mesh
+
+### Migration & Deployment Strategies
+*   **Strangler Pattern**: Migrating a legacy monolith by putting a facade (API Gateway) in front of it. Gradually routing specific endpoints to new microservices until the monolith is "strangled" and can be deleted.
+*   **Blue-Green Deployment**: Two identical environments (Blue is active, Green is idle). Deploy new code to Green, test it, then flip the load balancer router to instantly switch traffic. Zero downtime, easy rollback.
+*   **Canary Deployment**: Deploy the new version to a small subset of servers. Route 5% of traffic to it. Monitor error rates. If stable, gradually increase traffic to 100%.
+
+### Service Mesh & Sidecar Pattern
+*   **Sidecar Pattern**: Deploying a helper process (container) alongside the main application container within the same Pod. It handles cross-cutting concerns (logging, proxying) without polluting application code.
+*   **Service Mesh** (e.g., Istio, Linkerd): An infrastructure layer dedicated to service-to-service communication. It automatically injects proxy Sidecars into every pod. The mesh handles mTLS, retry logic, circuit breaking, and telemetry transparently, removing the need for application-level libraries (like Spring Cloud) to handle these concerns.
+
+---
+
+## 7. Observability
+
+Because a single request spans multiple services, traditional logging is insufficient.
+
+*   **Observability**: A system's ability to be understood from its external outputs (Metrics, Logs, and Traces).
+*   **Correlation ID (Trace ID)**: A unique UUID generated at the API Gateway and passed in HTTP headers (e.g., `X-B3-TraceId`) to every downstream service. Added to the logging MDC (Mapped Diagnostic Context) so all logs for a specific request can be aggregated.
+*   **Distributed Tracing**: Visualizing the lifecycle of a request as it hops across services (e.g., Jaeger, Zipkin). Breaks the request down into "Spans" (individual service operations) to identify latency bottlenecks.
+*   **OpenTelemetry**: The modern, vendor-agnostic industry standard (combining OpenTracing and OpenCensus) for generating, collecting, and exporting telemetry data (traces, metrics, logs) to backend platforms.
+
+# REST API Design: Senior Developer Notes
+
+This document explores the architectural constraints, advanced HTTP mechanics, and enterprise-grade design patterns required to build highly scalable, resilient, and developer-friendly RESTful APIs.
+
+---
+
+## 1. REST Architectural Constraints & Principles
+
+Representational State Transfer (REST) is an architectural style, not a protocol. True RESTful APIs adhere strictly to these constraints:
+*   **Client-Server**: Separation of concerns. UI/Client and Data Storage evolve independently.
+*   **Statelessness**: The server stores absolutely no client context between requests. Every request must contain all the information necessary to understand and process it.
+*   **Cacheability**: Responses must implicitly or explicitly define themselves as cacheable or not to prevent clients from reusing stale data.
+*   **Layered System**: A client cannot ordinarily tell whether it is connected directly to the end server, or to an intermediary (API Gateway, Load Balancer, CDN).
+*   **Uniform Interface**: The fundamental rule that differentiates REST from RPC. It relies on standard HTTP methods, resource URIs, and hypermedia.
+
+---
+
+## 2. Resource Modeling & URI Design
+
+### URI Design Rules
+*   **Nouns, not Verbs**: URIs identify resources, not actions. 
+    *   *Anti-pattern*: `POST /createOrder`, `GET /getUser?id=5`
+    *   *RESTful*: `POST /orders`, `GET /users/5`
+*   **Pluralization**: Standardize on plural nouns for collections (e.g., `/customers`, not `/customer`).
+*   **Hierarchical Nesting**: Express relations logically, but avoid deep nesting (max 2-3 levels).
+    *   *Good*: `GET /users/123/orders`
+    *   *Bad*: `GET /users/123/orders/456/items/789` (Flatten to `GET /orders/456/items`)
+
+### HTTP Methods & Semantics
+| Method | CRUD Action | Safe | Idempotent | Notes |
+| :--- | :--- | :--- | :--- | :--- |
+| **GET** | Read | Yes | Yes | Must never alter state. |
+| **POST** | Create | No | No | Used for creation or complex operations not fitting other methods. |
+| **PUT** | Update / Replace | No | Yes | Completely replaces the target resource. Missing fields should be nullified. |
+| **PATCH** | Partial Update | No | No* | Applies a delta. *Not inherently idempotent if appending to a list, but usually implemented as idempotent in APIs.* |
+| **DELETE** | Delete | No | Yes | Deleting an already deleted resource should still return 204 or 404 (both satisfy idempotency as the end state is the same). |
+
+---
+
+## 3. Data Shaping: Pagination, Filtering, & Sorting
+
+### Filtering & Sorting
+*   Pass filters as query parameters: `GET /users?role=admin&status=active`.
+*   Sorting should use a clear syntax, often comma-separated with prefixes for direction: `GET /users?sort=-createdAt,+name` (descending createdAt, ascending name).
+
+### Pagination Strategies
+*   **Offset Pagination** (`?page=2&size=50` or `?limit=50&offset=50`): Easy to implement, allows jumping to a specific page. **Severe flaw**: Performance degrades linearly ($O(N)$) on deep pages, and concurrent inserts/deletes cause duplicated or skipped records during iteration.
+*   **Keyset Pagination / Cursor** (`?limit=50&cursor=eyJpZCI6MTIzfQ==`): Returns a pointer (cursor) to the last read row. The DB executes an index seek (`WHERE id > cursor_id`). $O(1)$ performance, immune to concurrent data shifts. Lacks total page counts and random access.
+
+---
+
+## 4. API Contracts & Evolution
+
+### DTO (Data Transfer Object)
+*   Never expose internal JPA/Database entities directly via REST. Doing so leaks infrastructure details, causes infinite recursion in relationships, and tightly couples the API contract to the database schema.
+*   Use DTOs to tailor the payload to the specific endpoint.
+
+### API Versioning
+APIs break. Versioning is mandatory.
+1.  **URI Versioning** (`/api/v1/users`): Easiest to route at the API Gateway. Most common, though technically violates the rule that a URI should represent a single resource permanently.
+2.  **Header Versioning** (`X-API-Version: 2`): Keeps URIs clean. Requires clients to inject custom headers.
+3.  **Media Type / Content Negotiation** (`Accept: application/vnd.company.v2+json`): The most strictly RESTful approach, heavily relying on HTTP standards.
+
+### OpenAPI & Swagger
+*   **OpenAPI Specification (OAS)**: The industry standard, language-agnostic contract defining the API (endpoints, schemas, auth).
+*   **Swagger**: The tooling ecosystem (Swagger UI, Swagger Codegen) built around OAS. Contract-First design is heavily preferred at the enterprise level over Code-First generation.
+
+---
+
+## 5. Hypermedia & Content Negotiation
+
+### HATEOAS (Hypermedia as the Engine of Application State)
+*   The highest level of REST maturity (Richardson Maturity Model Level 3).
+*   Responses include hypermedia links indicating available state transitions, removing the need for clients to hardcode URIs.
+*   Example (HAL format):
+    ```json
+    {
+      "id": 123, "status": "PENDING",
+      "_links": {
+        "self": { "href": "/orders/123" },
+        "cancel": { "href": "/orders/123/cancel" }
+      }
+    }
+
+    # System Design: Senior Developer Notes
+
+This document distills core distributed systems concepts, scaling strategies, resilience patterns, and observability metrics. It focuses on architectural trade-offs and foundational theories required for senior-level system design.
+
+---
+
+## 1. Core Architecture & Network Scaling
+
+### Scalability vs High Availability
+*   **Scalability**: The system's ability to handle increased load by adding resources without degrading performance.
+*   **High Availability (HA)**: The system's ability to remain operational and accessible despite component failures, typically achieved through redundancy and eliminating single points of failure (SPOF). Often measured in "nines" (e.g., 99.99% uptime).
+
+### Scaling Strategies
+*   **Vertical Scaling (Scale-Up)**: Upgrading existing hardware (CPU, RAM). Limited by physical hardware constraints. Causes downtime during upgrades.
+*   **Horizontal Scaling (Scale-Out)**: Adding more commodity machines to a pool. Theoretically infinite. Requires stateless architecture and load balancing.
+
+### Traffic Routing & Edge Delivery
+*   **Load Balancer (LB)**: Distributes incoming network traffic across a group of backend servers. Operates at Layer 4 (Transport/TCP) or Layer 7 (Application/HTTP). Implements algorithms like Round Robin, Least Connections, or Consistent Hashing.
+*   **Reverse Proxy**: Sits in front of web servers. Used for SSL termination, compression, static content serving, and shielding backend IPs from the public internet (e.g., Nginx, HAProxy).
+*   **CDN (Content Delivery Network)**: A globally distributed network of proxy servers. Caches static assets (images, CSS, JS) at edge locations geographically closer to the user to drastically reduce latency and origin server load.
+
+---
+
+## 2. Caching Strategies & Technologies
+
+Caching reduces latency and database load by keeping frequently accessed data in memory.
+
+### Caching Patterns
+*   **Cache Aside (Lazy Loading)**: The application checks the cache. If a miss occurs, it fetches from the DB, writes to the cache, and returns the data. Best for read-heavy workloads.
+*   **Read Through**: The application asks the cache for data. The cache itself synchronously fetches from the DB on a miss. Abstracts DB logic from the app.
+*   **Write Through**: The application writes to the cache, and the cache synchronously writes to the DB. Ensures strong consistency, but adds latency to write operations.
+*   **Write Behind (Write Back)**: The application writes to the cache, which acknowledges immediately. The cache asynchronously flushes the write to the DB. Maximum write performance, but risks data loss if the cache crashes before flushing.
+
+### Cache Eviction Policies
+*   **LRU (Least Recently Used)**: Discards the least recently accessed items first. (Most common).
+*   **LFU (Least Frequently Used)**: Discards items with the lowest access frequency over time.
+*   **FIFO (First In, First Out)**: Evicts the oldest entries regardless of usage.
+
+### Distributed Cache Technologies
+*   **Redis**: Single-threaded (historically, though IO is now multi-threaded), in-memory data structure store. Supports persistence, replication, transactions, and complex data types (Sets, Hashes, Sorted Sets).
+*   **Memcached**: Multi-threaded, purely in-memory key-value store. No persistence or complex data types. Simpler and highly efficient for simple string caching.
+
+---
+
+## 3. Database Scaling & Distributed Theory
+
+### Database Scaling
+*   **Replication**: Creating copies of a database.
+    *   *Master-Slave*: All writes go to the Master, which streams replication logs to Slaves (Read Replicas). Scales read capacity.
+    *   *Master-Master*: Writes can go to any node. Introduces complex conflict resolution.
+*   **Partitioning**: Splitting tables into smaller pieces (horizontal/vertical) *within the same database instance* to improve query performance (e.g., partitioning by year).
+*   **Sharding**: Distributing data across *multiple physical database servers* based on a Shard Key (e.g., `user_id % num_servers`). Drastically increases complexity for joins and transactions but offers massive scale.
+
+### CAP Theorem
+In a distributed system, you can only guarantee two out of three characteristics simultaneously:
+1.  **Consistency (C)**: Every read receives the most recent write or an error.
+2.  **Availability (A)**: Every request receives a non-error response, without guaranteeing it contains the most recent write.
+3.  **Partition Tolerance (P)**: The system continues to operate despite arbitrary message loss or network partitions.
+*   *Note*: Because network partitions (P) are unavoidable in distributed systems, architects must choose between **CP** (fails requests if nodes lose sync) or **AP** (returns stale data if nodes lose sync).
+
+### Eventual Consistency
+A tradeoff in AP systems. It guarantees that if no new updates are made to a given data item, eventually all accesses to that item will return the last updated value (e.g., DNS, social media feeds).
+
+---
+
+## 4. Messaging & Asynchronous Processing
+
+### Asynchronous Processing & Backpressure
+*   **Async Processing**: Decoupling tasks from the main request thread to be processed in the background (e.g., video encoding, sending emails).
+*   **Backpressure**: A mechanism where a downstream system signals an upstream system to slow down when it is being overwhelmed with data.
+
+### Messaging Models
+*   **Message Queue**: Point-to-Point communication. A message is produced, placed in a queue, and consumed by *exactly one* consumer, then deleted.
+*   **Pub/Sub (Publish/Subscribe)**: A message is published to a topic and broadcasted to *all* active subscribers.
+
+### Messaging Technologies
+*   **Kafka**: A distributed **Event Streaming** platform. Uses an append-only log. Messages are not deleted upon consumption; they are retained for a configured period. Consumers track their own offsets. Highly scalable, ordered (within partitions), and replayable. Best for high-throughput telemetry, analytics, and event sourcing.
+*   **RabbitMQ**: A traditional message broker (AMQP protocol). Uses complex routing exchanges. Messages are pushed to consumers and deleted upon acknowledgment. Best for complex routing and traditional task queues.
+*   **ActiveMQ**: Java-based enterprise message broker supporting JMS. Similar use cases to RabbitMQ but heavier enterprise integration features.
+
+### Idempotency
+The property that an operation can be applied multiple times without changing the result beyond the initial application. Crucial in messaging systems because most message brokers guarantee "at-least-once" delivery, meaning duplicate messages are inevitable. Handled via idempotency keys and database checks.
+
+---
+
+## 5. Resilience & Fault Tolerance
+
+Architectures must be designed to survive partial failures gracefully.
+
+*   **Fault Tolerance**: The system's capacity to continue operating properly in the event of the failure of some of its components (e.g., using redundant servers, degraded modes).
+*   **Disaster Recovery (DR)**: Policies and procedures to recover infrastructure and systems following a catastrophic event (data center fire, region outage). Evaluated via RTO (Recovery Time Objective) and RPO (Recovery Point Objective).
+*   **Circuit Breaker**: Prevents cascading failures by stopping calls to a failing downstream service, returning a fallback response instantly until the service recovers.
+*   **Retry**: Automatically re-attempting failed operations for transient network glitches. Must incorporate **exponential backoff** and **jitter** to avoid overwhelming recovering services.
+*   **Bulkhead**: Isolating system resources (e.g., thread pools) per downstream service so that a failure or bottleneck in one integration doesn't exhaust resources for the entire application.
+*   **Rate Limiting**: Throttling incoming requests to protect internal infrastructure from DDOS or excessive API usage (e.g., Token Bucket, Leaky Bucket algorithms).
+
+---
+
+## 6. Observability
+
+Understanding the internal state of a complex system from the outside.
+
+*   **Monitoring & Metrics**: Aggregated numerical data over time (e.g., CPU usage, HTTP 500 error rate, request latency). Typically stored in a time-series database (Prometheus) and visualized (Grafana).
+*   **Logging**: Discrete, timestamped records of events (e.g., JSON logs shipped via ELK stack).
+*   **Distributed Tracing**: Tracking a single request as it traverses multiple microservices. Identifies latency bottlenecks by mapping the lifecycle into "spans" (e.g., Jaeger, Zipkin).
+*   **OpenTelemetry**: The vendor-agnostic CNCF standard for instrumenting, generating, collecting, and exporting telemetry data (metrics, logs, and traces) to any backend platform.
+
+# Production Troubleshooting: Senior Developer Notes
+
+This document covers the diagnostic tools, methodologies, and observability patterns required to identify, debug, and resolve severe performance degradation and failures in production Java/JVM and distributed environments.
+
+---
+
+## 1. JVM Diagnostics & Memory Troubleshooting
+
+### Heap Dump & Memory Leaks
+*   **Heap Dump**: A binary snapshot (`.hprof`) of all live objects in the JVM memory at a specific moment. Triggered manually via `jcmd` or automatically via `-XX:+HeapDumpOnOutOfMemoryError` (mandatory for production). Analyzed using tools like Eclipse MAT (Memory Analyzer Tool).
+*   **Memory Leak**: In Java, a leak occurs when objects are no longer needed by the business logic but are still strongly referenced (e.g., stuck in static collections or ThreadLocals), preventing the Garbage Collector from reclaiming them.
+*   **Detection**: Look for a "sawtooth" GC graph where the baseline memory usage continuously creeps upward after every Full GC, eventually hitting the maximum heap size. In MAT, calculate the **Dominator Tree** and look for **GC Roots** holding massive retained sizes.
+
+### OutOfMemoryError (OOM)
+OOM does not just mean "heap is full." You must check the exact message:
+*   `Java heap space`: Standard heap exhaustion. Fix leaks or increase `-Xmx`.
+*   `Metaspace`: The area storing class metadata is full. Usually caused by classloader leaks or excessive dynamic proxy generation (e.g., CGLIB, reflection).
+*   `GC overhead limit exceeded`: The JVM spends >98% of its time doing GC and recovers <2% of the heap. A symptom of a severe memory leak or severely undersized heap.
+*   `unable to create new native thread`: The OS refused to allocate memory for a new thread stack, or the OS thread limit (`ulimit -u`) was reached.
+
+### High Memory & Garbage Collection (GC) Logs
+*   **GC Logs**: Essential for performance tuning. Enabled via `-Xlog:gc*` (Java 9+). They reveal pause times, frequency of minor/major collections, and reclaimed memory.
+*   **Garbage Collection Tuning**:
+    *   **G1GC (Default Java 9+)**: Balances throughput and latency by dividing the heap into regions.
+    *   **ZGC / Shenandoah**: Ultra-low latency collectors (sub-millisecond pauses) at the cost of slight throughput reduction. Good for massive heaps.
+
+### High CPU Usage Resolution (The Hex Trick)
+1.  Find the application process ID (PID): `top` or `jps`.
+2.  Find the specific OS thread consuming the CPU: `top -H -p <PID>`. Note the native Thread ID (TID).
+3.  Convert the TID from decimal to hexadecimal (e.g., `1234` -> `4d2`).
+4.  Capture a **Thread Dump**.
+5.  Search the thread dump for `nid=0x4d2`. The stack trace right there is the exact code spinning the CPU (often an infinite loop, heavy regex, or aggressive GC).
+
+---
+
+## 2. Threading & Concurrency Issues
+
+### Thread Dump & Analysis
+*   **Thread Dump**: A text snapshot of the exact state of every thread in the JVM (`RUNNABLE`, `BLOCKED`, `WAITING`, `TIMED_WAITING`). Captured via `jstack <PID>` or `jcmd <PID> Thread.print`.
+
+### Deadlock Detection & Contention
+*   **Deadlock**: Thread A holds Lock 1 and waits for Lock 2. Thread B holds Lock 2 and waits for Lock 1. The JVM can automatically detect classic monitor deadlocks and will print them at the bottom of a thread dump.
+*   **Thread Contention**: Threads aren't deadlocked, but are severely bottlenecked waiting to enter a `synchronized` block or acquire a lock. Look for dozens of threads in the `BLOCKED` state waiting on the same monitor ID.
+
+### Connection Pool Exhaustion
+*   **Symptoms**: Application hangs, thread dumps show dozens of threads in `WAITING` state on `HikariPool.getConnection()`. Log shows `Connection is not available, request timed out`.
+*   **Root Causes**:
+    1.  **Connection Leak**: Code opens a connection but misses the `finally` block to `.close()` it.
+    2.  **Slow Queries**: Database is slow, causing active connections to be held longer, starving new requests.
+    3.  **Undersized Pool**: High traffic exceeds the `maximum-pool-size`.
+
+### Database Slow Queries
+*   Often the true root cause of CPU spikes (app waiting/parsing) and thread exhaustion.
+*   Troubleshooting: Enable DB slow query logs. Use APM (Application Performance Monitoring) to identify queries taking >500ms. Check the `EXPLAIN` plan in the DB to ensure indexes are hitting.
+
+---
+
+## 3. JVM Tooling & Profiling
+
+### JFR (Java Flight Recorder)
+*   A profiling and event collection framework built directly into the JVM.
+*   **Low Overhead**: (<2%) Safe for continuous use in production.
+*   Captures highly detailed metrics on method execution time, memory allocation, object creation, and I/O wait times. Analyzed offline using **JDK Mission Control (JMC)**.
+
+### VisualVM & JConsole
+*   GUI tools attached via JMX (Java Management Extensions) to a running JVM.
+*   Used for live, visual monitoring of Heap usage graphs, Thread states, CPU utilization, and forcing manual GCs. (Best for local/staging; JMX is rarely exposed directly in production due to security).
+
+### JMX (Java Management Extensions)
+*   A standard for managing and monitoring applications. Exposes internal state via **MBeans** (Managed Beans). Frameworks like Spring Boot Actuator often translate JMX metrics into HTTP endpoints.
+
+### Profiling
+*   **Sampling Profiler**: Periodically pauses threads to record their stack traces. Low overhead, identifies "hotspots" (methods where the most time is spent).
+*   **Instrumentation Profiler**: Injects bytecode into methods to precisely measure execution time and invocation counts. High overhead, alters application behavior (observer effect).
+
+---
+
+## 4. Observability & Log Analysis
+
+### Log & Stack Trace Analysis
+*   **Stack Trace Analysis**: Always read from the bottom up. The top is just where the exception was caught; the bottom (`Caused by:`) is where the actual failure originated. Look for your application's package names amidst the framework noise.
+*   **Log Analysis**: In distributed systems, raw logs are useless without correlation. Ensure all log statements include contextual data (user ID, tenant ID) via SLF4J MDC (Mapped Diagnostic Context).
+
+### Metrics & Visualization (Micrometer, Prometheus, Grafana)
+*   **Micrometer**: The SLF4J for metrics. A vendor-neutral facade that instrument Spring Boot applications (timers, counters, gauges).
+*   **Prometheus**: A time-series database that *pulls* metrics from application endpoints (e.g., `/actuator/prometheus`).
+*   **Grafana**: The visualization layer that connects to Prometheus to build dashboards and trigger alerts based on PromQL queries.
+
+### Log Aggregation (ELK Stack & Splunk)
+*   **ELK Stack**: Elasticsearch (Search DB), Logstash (Processing pipeline), Kibana (Visualization UI).
+*   **Splunk**: Enterprise equivalent.
+*   These tools ingest logs from all microservices, allowing cross-system text searches and log pattern alerting.
+
+### OpenTelemetry & Distributed Tracing
+*   **OpenTelemetry**: The CNCF standard for generating telemetry data (Metrics, Logs, Traces).
+*   **Distributed Tracing**: Uses a Correlation ID (Trace ID) passed via HTTP headers across microservices. Visualized in tools like Jaeger. Allows you to see exactly which microservice in a complex chain caused the 500 error or the 3-second latency spike.
+
+---
+
+## 5. Kubernetes Probes & Reliability
+
+### Health Checks (Readiness vs Liveness)
+*   **Liveness Probe**: "Am I completely broken?" If this endpoint fails (e.g., deadlocked), Kubernetes will **restart** the pod.
+*   **Readiness Probe**: "Am I ready to receive traffic?" If this endpoint fails (e.g., still initializing caches, or lost DB connection), Kubernetes will temporarily **remove the pod from the Load Balancer**, but will *not* restart it.
+
+---
+
+## 6. Incident Management & Validation
+
+### Incident Response & Root Cause Analysis (RCA)
+*   **Incident Response**: The immediate process of mitigating the outage (rollback, scaling up, restarting). The goal is restoring service, not finding the bug.
+*   **Root Cause Analysis**: Post-incident investigation. Uses techniques like the **5 Whys** to drill past symptoms (e.g., "CPU spiked") to the systemic flaw (e.g., "No timeout was set on the third-party HTTP client"). Must result in a blameless Post-Mortem document and actionable remediation tickets.
+
+### Performance & Load Testing
+*   **Performance Testing**: The broad umbrella of testing system behavior under various conditions.
+*   **Load Testing**: Simulating the expected peak concurrency (e.g., Black Friday traffic) to ensure response times remain within SLAs. (Tools: JMeter, Gatling, k6).
+*   *Other types*: Stress Testing (pushing until it breaks to find the bottleneck), Soak Testing (running steady load for 24+ hours to flush out memory leaks).
+
+# Java Stream API & Functional Interfaces: Senior Developer Notes
+
+This document explores the internals, performance implications, and architectural design of Java's Stream API and functional programming constructs, focusing on lazy evaluation, memory barriers, and parallel processing trade-offs.
+
+---
+
+## 1. Functional Programming Foundations
+
+### Lambda Expressions & Method References
+*   **Lambda Expressions**: Unlike anonymous inner classes (which compile to physical `.class` files like `Outer$1.class`), lambdas are implemented using the `invokedynamic` bytecode instruction introduced in Java 7. The JVM generates the implementation class dynamically at runtime via the `LambdaMetafactory`, reducing memory footprint and startup time.
+*   **Method Reference (`::`)**: Shorthand for lambdas calling a single method. Often yields cleaner code and avoids the creation of an extra synthetic method by the compiler.
+    *   *Types*: Static (`Integer::parseInt`), Bound Instance (`obj::toString`), Unbound Instance (`String::length`), Constructor (`ArrayList::new`).
+
+### Core Functional Interfaces (`java.util.function`)
+Interfaces with exactly one abstract method (annotated with `@FunctionalInterface`).
+| Interface | Signature | Use Case |
+| :--- | :--- | :--- |
+| **Predicate** | `T -> boolean` | Filtering, matching (`filter()`, `allMatch()`). |
+| **Function** | `T -> R` | Transformation, mapping (`map()`). |
+| **Consumer** | `T -> void` | Side-effects, processing (`forEach()`, `peek()`). |
+| **Supplier** | `() -> T` | Deferred execution, factory generation (`orElseGet()`). |
+| **BinaryOperator**| `(T, T) -> T` | Accumulation of the same type (`reduce()`). |
+| **Comparator** | `(T, T) -> int` | Sorting logic (`sorted()`). |
+
+---
+
+## 2. Stream Architecture & Mechanics
+
+### Stream Creation
+*   Streams can be created from collections (`list.stream()`), arrays (`Arrays.stream()`), explicit values (`Stream.of()`), or generated dynamically (`Stream.iterate()`, `Stream.generate()`).
+*   A Stream is not a data structure; it is a pipeline of computational operations applied to a source.
+
+### Lazy Evaluation & Pipeline Fusion
+*   **Lazy Evaluation**: Intermediate operations do *not* execute until a Terminal operation is invoked.
+*   **Loop Fusion**: The engine fuses multiple stateless intermediate operations (like `filter` + `map`) into a single pass over the data. It does not iterate the collection multiple times.
+*   **Short-Circuiting**: Operations like `limit()`, `findFirst()`, and `anyMatch()` can terminate the stream early, skipping processing for remaining elements entirely.
+
+### Intermediate Operations (Stateless vs. Stateful)
+Returns a new `Stream`.
+*   **Stateless**: Processes elements independently.
+    *   `map`: 1-to-1 transformation.
+    *   `flatMap`: 1-to-N transformation. Unrolls/flattens nested structures (e.g., `Stream<List<T>>` -> `Stream<T>`).
+    *   `filter`: Drops elements failing a `Predicate`.
+    *   `peek`: For side-effects (mostly debugging). **Warning**: The JVM may optimize `peek` out entirely if the terminal operation doesn't require consuming the elements (e.g., `count()`).
+*   **Stateful**: Must see all (or multiple) elements before yielding a result. Acts as a **Memory Barrier**, breaking pipeline fusion.
+    *   `sorted`: Buffers all elements in memory to sort them before passing the first element to the next stage.
+    *   `distinct`: Maintains an internal `HashSet` of seen elements to filter duplicates.
+    *   `limit` / `skip`: Stateful but short-circuiting.
+
+### Terminal Operations
+Consumes the stream and produces a result (or side-effect). A stream cannot be reused after a terminal operation.
+*   **reduce**: An immutable reduction. Repeatedly applies a `BinaryOperator` to combine elements. *Anti-pattern*: Using `reduce` to add to a `List` creates a new `List` on every step ($O(N^2)$).
+*   **collect**: A mutable reduction. Accumulates elements into a mutable container (like `ArrayList` or `StringBuilder`) using a `Collector`.
+
+---
+
+## 3. Advanced Collectors (`java.util.stream.Collectors`)
+
+The `Collectors` utility class provides highly optimized, thread-safe aggregation implementations.
+
+### Grouping & Partitioning
+*   **groupingBy**: Functions like SQL `GROUP BY`. Returns a `Map<K, List<V>>`. Can be overloaded to supply a custom Map implementation or downstream collector.
+*   **partitioningBy**: A specialized, faster form of `groupingBy` taking a `Predicate`. Always returns a `Map<Boolean, List<V>>` (exactly two buckets: true and false).
+
+### Aggregation & Transformation
+*   **toMap**: Converts elements to keys and values. **Gotcha**: Throws `IllegalStateException` on duplicate keys unless you provide a merge function (e.g., `(oldVal, newVal) -> newVal`). Also throws `NullPointerException` if the mapped value is null.
+*   **joining**: Concatenates string elements efficiently using `StringBuilder`, with optional delimiters, prefixes, and suffixes.
+*   **mapping**: Adapts a collector to accept elements of a different type by applying a mapping function before accumulation (often used as a downstream collector inside `groupingBy`).
+*   **counting**: Counts elements (used as a downstream collector).
+*   **summarizingInt** (also Long, Double): Computes count, sum, min, max, and average in a single pass, returning an `IntSummaryStatistics` object.
+*   **collectingAndThen**: Applies a final transformation to the result of a collector (e.g., collecting to a List, then wrapping it in `Collections.unmodifiableList()`).
+
+---
+
+## 4. Specialized Streams & Optional
+
+### Primitive Streams
+*   `IntStream`, `LongStream`, `DoubleStream`.
+*   **Autoboxing Overhead**: Using `Stream<Integer>` incurs massive memory/CPU overhead due to wrapping primitives into objects. Primitive streams store values in contiguous arrays.
+*   Conversion is done via `mapToInt`, `mapToLong`, `mapToDouble`.
+*   Includes specialized terminal ops like `sum()`, `average()`, `range()`.
+
+### Optional
+*   A container object which may or may not contain a non-null value. Prevents `NullPointerException`.
+*   Designed explicitly as a return type for methods (e.g., `findFirst()`).
+*   **Anti-patterns**: 
+    *   Do not use `Optional` as a class field (it is not `Serializable`).
+    *   Do not use as a method parameter (forces callers to wrap values).
+    *   Do not call `.get()` without `.isPresent()` (defeats the purpose; use `.orElse()`, `.orElseGet()`, or `.orElseThrow()`).
+
+---
+
+## 5. Parallel Streams & Performance
+
+### Execution Mechanics
+*   Invoked via `.parallelStream()` or `.parallel()`.
+*   Operates by recursively splitting the data source using a **Spliterator**.
+*   Executes tasks across the JVM's shared, global `ForkJoinPool.commonPool()`.
+
+### Stream Performance & Trade-offs
+Parallel streams are not a magic performance bullet and can easily degrade performance if misused.
+*   **The NQ Model**: Parallelization only helps if $N \times Q > 10,000$ (where $N$ is the number of elements and $Q$ is the cost per element in CPU cycles).
+*   **Data Locality**: `ArrayList` and arrays split cleanly and have excellent CPU cache locality. `LinkedList` and `HashSet` split poorly and perform terribly in parallel.
+*   **Statefulness**: Parallelizing stateful operations (`sorted`, `distinct`, `limit`) requires heavy thread synchronization, destroying any concurrency benefits.
+*   **The I/O Trap**: **Never use parallel streams for blocking I/O operations** (database calls, HTTP requests). Because it uses the shared `commonPool`, blocking threads here will starve the rest of the JVM of CPU threads, potentially crashing other parallel tasks across the application.
